# BHelloC

./: CMakeLists.txt  main.cpp
ClassObject/: class.cpp
ClassObject/circle/: Circle.cpp  Point.cpp  main.cpp
ClassObject/cube/: main.cpp
ClassObject/privateAttribute/: private.cpp
MemoryModelAfter/: after.cpp
MemoryModelBefore/: before.cpp
function/: function.cpp
include/: Circle.h  Point.h
quote/: quote.cpp
